// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withImage(BaseComponent): NewComponent start with default props waiting for user to select any image 1`] = `
<div
  name="props-displayer"
>
  <input-props />
  <output-props
    cropping={false}
    failed={false}
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={false}
    uploading={false}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset cropping image 1`] = `
<div
  name="props-displayer"
>
  <input-props
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
  />
  <output-props
    cropping={true}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={false}
    uploading={false}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset failed to upload image 1`] = `
<div
  name="props-displayer"
>
  <input-props
    failed={true}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
  />
  <output-props
    cropping={true}
    failed={true}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={false}
    uploading={false}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset succeeded to upload image 1`] = `
<div
  name="props-displayer"
>
  <input-props
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    url="http://pic.example.com/200/200"
  />
  <output-props
    cropping={false}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={true}
    uploading={false}
    url="http://pic.example.com/200/200"
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with image preset uploading image 1`] = `
<div
  name="props-displayer"
>
  <input-props
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    uploading={true}
  />
  <output-props
    cropping={true}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={false}
    uploading={true}
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with url preset cropping url 1`] = `
<div
  name="props-displayer"
>
  <input-props
    uploaded={false}
    url="http://pic.example.com/200/200"
  />
  <output-props
    cropping={true}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={false}
    uploading={false}
    url="http://pic.example.com/200/200"
  />
</div>
`;

exports[`withImage(BaseComponent): NewComponent start with url preset previewing url 1`] = `
<div
  name="props-displayer"
>
  <input-props
    url="http://pic.example.com/200/200"
  />
  <output-props
    cropping={false}
    failed={false}
    image={
      Object {
        "preview": "http://pic.example.com/200/200",
      }
    }
    onUpload={[Function]}
    onUploadFail={[Function]}
    onUploadStart={[Function]}
    onUploadSucceed={[Function]}
    openEditor={[Function]}
    reset={[Function]}
    setEditor={[Function]}
    setImage={[Function]}
    uploaded={true}
    uploading={false}
    url="http://pic.example.com/200/200"
  />
</div>
`;
